--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Add Rules to Cloudflare Gateway
 on:
   push:
   schedule:
-   - cron: "0 * * * *"
+   - cron: "*/30 * * * *"
   workflow_dispatch:
 jobs:
   run:
